--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,31 +1,29 @@
 {
-  "name": "store",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@headlessui/react": "^1.7.18",
-    "@heroicons/react": "^2.1.1",
-    "@mui/icons-material": "^5.15.9",
-    "@mui/material": "^5.15.9",
-    "@mui/styled-engine-sc": "^6.0.0-alpha.14",
-    "@mui/x-data-grid": "^6.19.3",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
+    "@mui/x-data-grid": "^6.19.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "joi": "^17.12.1",
+    "bcrypt": "^5.1.1",
+    "joi": "^17.12.2",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.21.3",
-    "react-scripts": "^5.0.1",
-    "react-scroll": "^1.9.0",
-    "styled-components": "^6.1.8",
-    "stylis-plugin-rtl": "^2.1.1",
+    "react-router-dom": "^6.22.1",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
   "scripts": {
     "start": "react-scripts start",
