--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "joi": "^17.12.2",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
+    "path-to-regexp": "^6.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
