--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-REMOTE_URL="mongodb://127.0.0.1:27017/project-NodeJs"
+REMOTE_URL="mongodb://127.0.0.1:27017/Store"
 PORT = 5000
 JWT_SECRET = "Project#nodeJs#!2024!Full&Stack!123!" 
